chore: add a task to update the modules

--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,8 @@
   "tasks": {
     "dev": "deno fmt && deno lint && deno task test --fail-fast",
     "run": "deno run --allow-net ytu2i.ts",
-    "test": "deno test --allow-read --allow-env --allow-run --allow-net"
+    "test": "deno test --allow-read --allow-env --allow-run --allow-net",
+    "update": "udd *.ts --test='deno task test'"
   },
 
   "fmt": {
