--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,27 +1,35 @@
-- name: documentation
-  description: Improvement or additons to documentation
-  color: 0075ca
 - name: bug
-  description: Something isn't working
-  color: d73a4a
-- name: feature
-  description: New feature
-  color: d93f0b
-- name: discussion
-  description: Discussion
-  color: cfd3d7
-- name: enhancement
-  description: Enhancement
-  color: d876e3
-- name: test
-  description: Test
-  color: a2eeef
-- name: refactoring
-  description: refactor
-  color: 0e8a16
-- name: publishing
-  description: publish
-  color: 5319e7
+  description: Indicates system malfunctions or problems.
+  color: e11d21  # Softer red to indicate urgency without harshness.
+
 - name: ci
-  description: ci
-  color: e4e669
+  description: Tasks or issues related to Continuous Integration.
+  color: 0e8a16  # Soft green, good for representing ongoing processes.
+
+- name: discussion
+  description: Topics that require discussion or exchange of ideas.
+  color: ffaa00  # Warm orange, inviting and perfect for discussions.
+
+- name: documentation
+  description: Updates or improvements needed for documentation.
+  color: 3182bd  # Calm blue, indicative of clarity and understanding.
+
+- name: enhancement
+  description: Improvements or minor feature additions to existing functionalities.
+  color: 6f42c1  # Lighter purple, less intense but still significant.
+
+- name: feature
+  description: New features or requests.
+  color: 2188ff  # Bright but softer blue, stands out for new ideas.
+
+- name: publishing
+  description: Related to release or deployment processes.
+  color: 34d058  # Gentle green, easier on the eyes and correlates with success.
+
+- name: refactoring
+  description: Code refactoring or improvements to internal structures.
+  color: dbab09  # Muted gold, serious but not too loud.
+
+- name: test
+  description: Addition of tests or corrections of test failures.
+  color: b392f0  # Soft lilac, peaceful and less aggressive for testing.
