--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,10 @@
-{
+{ 
   "tasks": {
     "dev": "deno fmt && deno lint && deno task test --fail-fast",
     "run": "deno run --allow-net ytu2i.ts",
     "test": "deno test --allow-read --allow-env --allow-run --allow-net",
-    "update": "udd *.ts --test='deno task test'"
+    "update": "deno run --allow-env --allow-read --allow-write --allow-run=git,deno --allow-net=deno.land,jsr.io,registry.npmjs.org jsr:@molt/cli ./*.ts",
+    "update:commit": "deno task -q update --commit --pre-commit=fmt,lint --prefix='build:'"
   },
 
   "fmt": {
