--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,11 +21,11 @@ jobs:
           git config user.email github-actions@github.com
           git switch -c update-dependancy
       - run: deno task update:commit
-      - run: |
+      - name: diff
+        id: check_update
+        run: |
           git diff --quiet main..update-dependancy
           echo "rn=$?" >> $GITHUB_OUTPUT
-          exit 0
-        id: check_update
       - run: |
           gh pr create -B main -t "Update Dependency" -l "depenencies"
           echo "rn=$?" >> $GITHUB_OUTPUT
