--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,14 +25,13 @@ jobs:
         id: check_update
         run: |
           if git diff --quiet main..update-dependency; then
-            echo "rn=1" >> $GITHUB_OUTPUT
+            echo "rn=true" >> $GITHUB_OUTPUT
           else
-            echo "rn=0" >> $GITHUB_OUTPUT
+            echo "rn=false" >> $GITHUB_OUTPUT
           fi
       - run: |
           gh pr create -B main -t "Update Dependency" -l "depenencies"
-          echo "rn=$?" >> $GITHUB_OUTPUT
         id: pr_create
-        if: "${{ steps.check_update.outputs.rn == 1 }}"
+        if: ${{ steps.check_update.outputs.rn == "true" }}
       - run: gh pr merge --merge --auto --delete-branch
-        if: "${{ steps.pr_create.outputs.rn == 1 }}"
+        if: ${{ steps.check_update.outputs.rn == "true" }}
