--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,11 @@
     "update": "deno run --allow-env --allow-read --allow-write --allow-run=git,deno --allow-net=deno.land,jsr.io,registry.npmjs.org -c deno.json jsr:@molt/cli ./*.ts",
     "update:commit": "deno task -q update --commit --prefix='build:'"
   },
+  "imports": {
+    "deno_dom": "https://deno.land/x/deno_dom@v0.1.45/deno-dom-wasm.ts",
+    "std/assert": "https://deno.land/std@0.224.0/assert/mod.ts",
+    "dax": "https://deno.land/x/dax@0.39.2/mod.ts"
+  },
 
   "fmt": {
     "exclude": ["README.md"],
