--- a/deno.json
+++ b/deno.json
@@ -7,9 +7,9 @@
     "update:commit": "deno task -q update --commit --prefix='build:'"
   },
   "imports": {
-    "deno_dom": "https://deno.land/x/deno_dom@v0.1.45/deno-dom-wasm.ts",
-    "std/assert": "https://deno.land/std@0.224.0/assert/mod.ts",
-    "dax": "https://deno.land/x/dax@0.39.2/mod.ts"
+    "@david/dax": "jsr:@david/dax@^0.41.0",
+    "@std/assert": "jsr:@std/assert@^0.225.1",
+    "deno_dom": "https://deno.land/x/deno_dom@v0.1.45/deno-dom-wasm.ts"
   },
 
   "fmt": {
