--- a/deno.json
+++ b/deno.json
@@ -7,8 +7,8 @@
     "update:commit": "deno task -q update --commit --prefix='build:'"
   },
   "imports": {
-    "@david/dax": "jsr:@david/dax@^0.41.0",
-    "@std/assert": "jsr:@std/assert@^0.225.1",
+    "@david/dax": "jsr:@david/dax@0.41.0",
+    "@std/assert": "jsr:@std/assert@0.225.1",
     "deno_dom": "https://deno.land/x/deno_dom@v0.1.47/deno-dom-wasm.ts"
   },
 
