--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -43,7 +43,7 @@ jobs:
         if: steps.check_update.outputs.rn == 'true'
       - run: sleep 60
         if: steps.check_update.outputs.rn == 'true'
-      - run: gh pr merge --merge --auto 
+      - run: gh pr merge --merge --auto --delete-branch
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         if: steps.check_update.outputs.rn == 'true'
