--- a/deno.json
+++ b/deno.json
@@ -7,9 +7,9 @@
     "update:commit": "deno task -q update --commit --prefix='build:'"
   },
   "imports": {
+    "@b-fuze/deno-dom": "jsr:@b-fuze/deno-dom@^0.1.47",
     "@david/dax": "jsr:@david/dax@0.41.0",
-    "@std/assert": "jsr:@std/assert@0.226.0",
-    "deno_dom": "https://deno.land/x/deno_dom@v0.1.47/deno-dom-wasm.ts"
+    "@std/assert": "jsr:@std/assert@0.226.0"
   },
 
   "fmt": {
